<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#C6C6C6" 
    android:orientation="vertical" >
    
	<Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ocr" />

    <EditText
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pub_ocr" />
    <Button
        android:id="@+id/destination_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_reached" />
</LinearLayout>