<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:text="@string/no_user_selected" />
    <ImageView
        android:id="@+id/iv_profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/default_profile_photo"     
        android:layout_marginLeft="16dp"   
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp" >

        <Button
            android:id="@+id/choose_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chooseTheAccount"
            android:text="@string/choose_account" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="continueToGame"
            android:text="@string/continue_toGame" />
    </LinearLayout>

</LinearLayout>